# llm-from-scratch

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
phase1_foundation/project1_minimal_gpt/: README.md  USAGE.md  download_data.py  generate.py  model.py  train.py
phase1_foundation/project2_tokenizer/: README.md  config.py  download_data.py  test_tokenizer.py  tokenizer.py  train_tokenizer.py
phase1_foundation/project3_contextual_embeddings/: README.md  config.py  download_data.py  model.py  test_model.py  train.py
week1/project1_minimal_gpt/: USAGE.md  config.py  generate.py  train.py
