[project]
name = "llm-implementation"
version = "0.1.0"
description = "Hands-on LLM implementation from scratch"
requires-python = ">=3.10"

[tool.uv]
dev-dependencies = []

[dependency-groups]
all = [
    "torch>=2.0.0",
    "transformers>=4.35.0",
    "datasets>=2.14.0",
    "tokenizers>=0.14.0",
    "accelerate>=0.24.0",
    "bitsandbytes>=0.41.0",
    "peft>=0.6.0",
    "trl>=0.7.0",
    "wandb>=0.15.0",
    "tensorboard>=2.14.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "gradio>=4.0.0",
]
